Final Update
Added UML and Readme has been updated along with testing image for adding games